commit #2 - alteracoes
