# src/main/java/com/cassio/player/controllers/ClientesApiController.java
@@ -4,13 +4,10 @@ import com.cassio.player.interfaces.RestApiController;
 import com.cassio.player.models.ClienteRequest;
 import com.cassio.player.models.ClienteResponse;
 import com.cassio.player.services.ClientesService;
-import io.swagger.annotations.ApiParam;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.inject.Inject;
-import javax.validation.Valid;
 import java.util.List;
 
 @RestController
@@ -20,12 +17,27 @@ public class ClientesApiController implements RestApiController, com.cassio.play
     private ClientesService clientesService;
 
     @Override
+    public ResponseEntity<List<ClienteResponse>> listarClientes() {
+        return clientesService.findAll();
+    }
+
+    @Override
+    public ResponseEntity<ClienteResponse> listarCliente(Integer idCliente) {
+        return clientesService.findById(idCliente);
+    }
+
+    @Override
     public ResponseEntity<ClienteResponse> criarCliente(ClienteRequest cliente) {
         return clientesService.save(cliente);
     }
 
     @Override
-    public ResponseEntity<List<ClienteResponse>> listarClientes() {
-        return clientesService.findAll();
+    public ResponseEntity<ClienteResponse> editarCliente(Integer idCliente, ClienteRequest cliente) {
+        return clientesService.update(idCliente, cliente);
+    }
+
+    @Override
+    public ResponseEntity<Void> deletarCliente(Integer idCliente) {
+        return clientesService.deleteById(idCliente);
     }
 }
